fixed navbar spacing to be responsive

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,11 @@
   min-width: 200px;
 }
 
+.navbar-nav {
+  flex: 1;
+  padding-left: 20rem;
+}
+
 .navbar-brand--image {
   width: 100%;
   height: auto;
